# gba-tileeditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  editorwindow.h  gba-tileeditor.desktop  gba-tileeditor.pro  map.cpp  map.h
.github/workflows/: build.yml  release.yml
forms/: mainwindow.ui
gba-tileeditor-client/: CMakeLists.txt  gba-tileeditor-client.pro
gba-tileeditor-client/src/: command.hh  editorwindow.hh  main.cc  map.cc  mapview.cc  newdialog.cc  newdialog.hh  saveheadercommand.hh  savejsoncommand.hh  savesourcescommand.hh
src/: command.h  command.hh  editorwindow.cc  editorwindow.cpp  editorwindow.h  main.cpp  map.cc  map.cpp  map.h  map.hh  mapview.cc  mapview.cpp  mapview.h  mapview.hh  newdialog.cpp  newdialog.h  paletteview.cc  paletteview.cpp  paletteview.h  paletteview.hh  saveheadercommand.h  saveheadercommand.hh  savejsoncommand.h  savejsoncommand.hh  savesourcescommand.h
